Show filtering UI on small displays, fixes #33

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,7 +117,7 @@ input {
 /* Articles */
 
 .articles {
-  padding-left: 30px;
+  padding-left: 20px;
   margin-right: 300px;
 }
 
@@ -130,7 +130,7 @@ input {
 
 .article {
   border-top: 1px solid #ddd;
-  margin-right: 30px;
+  margin-right: 20px;
   font-family: "PT Serif", serif;
   color: #333;
 }
@@ -203,6 +203,9 @@ input {
 }
 
 @media only screen and (max-width: 600px) {
+  .header {
+    position: absolute;
+  }
   .articles {
     margin-right: 0;
   }
@@ -212,6 +215,10 @@ input {
     margin-bottom: 0;
   }
   .sidebar {
+    width: 100%;
+    position: relative;
+  }
+  .search {
     display: none;
   }
 }
